# PixelMaze

./: CMakeLists.txt  main.cpp
common/: Camera.cpp  Camera.h  Point.h
infrastructure/: Keyboard.cpp  Keyboard.h  Screen.cpp  Screen.h
objects/: Map.cpp  Map.h  Object.cpp  Object.h  Player.cpp  Player.h
rooms/: room1.txt
